style.css
/* ... */
#close-menu {
  background: none;
  border: none;
  position: absolute;
  top: 1%;
  left: 5%;
}
.close-menu {
  width: 3rem;
  height: 3rem;
}
.black-space {
  width: 50vw;
  background-color: black;
  opacity: 0.5;
  position: absolute;
  top: 0%;
  left: 100%;
  bottom: 0%;
  right: 0%;
}
.nav-link {
  font-size: 3rem;
  color: #e2e2e2;
  text-transform: uppercase;
}
.theme-toggle {
  background: none;
  border: none;
}
.theme-toggle-image {
  width: 4rem;
  height: 4rem;
  filter: drop-shadow(2px 2px 2px white);
}
.menu-button {
  background-color: none;
  border: none;
}
.arrow-button1 {
  width: 5rem;
  height: 5rem;
  background-color: #007fd7;
  border-radius: 10rem;
  border: none;
  opacity: 0.5;
  padding: 0.5rem;
  position: absolute;
  top: 50%;
  right: 90%;
}
.arrow-button2 {
  width: 5rem;
  height: 5rem;
  background-color: #007fd7;
  border-radius: 10rem;
  border: none;
  opacity: 0.5;
  padding: 0.5rem;
  position: absolute;
  top: 50%;
  left: 90%;
}
.arrow-button1:hover,
.arrow-button2:hover {
  opacity: 0.7;
  background-color: #005bb5;
}
.arrow-button1:focus,
.arrow-button2:focus {
  opacity: 1;
  background-color: #ff6467;
}

.arrows {
  display: flex;
  justify-content: space-between;
  align-items: center;
  flex-direction: row;
}
.card-arrows {
  display: flex;
  justify-content: space-between;
  align-items: center;
  flex-direction: row;
}
.Left_arrow,
.Right_arrow {
  width: 3rem;
  height: 3rem;
  align-items: center;
}

.cycle-image-Spider {
  max-width: 30rem;
  width: auto;
  height: auto;
  max-height: 35rem;
  position: relative;
  animation: jump 2s ease-in-out infinite;
}
@keyframes jump {
  0% {
    transform: translateY(0);
  }
  50% {
    transform: translateY(-20px);
  }
  100% {
    transform: translateY(0);
  }
}
.shadow {
  position: absolute;
  width: 20rem;
  height: 5rem;
  background-color: rgba(0, 0, 0, 0.5);
  border-radius: 50%;
  left: 10%;
  z-index: 2;
  animation: shadow-move 2s ease-in-out infinite;
}
@keyframes shadow-move {
  0% {
    width: 20rem;
    height: 5rem;
    opacity: 0.5;
  }
  50% {
    width: 10rem;
    height: 3rem;
    left: 25%;
    opacity: 0.7;
  }
  100% {
    width: 5rem;
    height: 3rem;
    left: 30%;
    opacity: 0;
  }
}
.podium {
  max-width: 30rem;
  width: 100%;
  max-height: 10rem;
  height: 100%;
}
.podium-container {
  position: relative;
}
.podium-title {
  font-size: 1.7rem;
  color: #f2c288;
  font-weight: 700;
  position: absolute;
  font-family: Bellefair;
  text-transform: uppercase;
  text-shadow:
    0 0 7px #ff6467,
    0 0 9px #007fd7;
  z-index: 2;
  top: 50%;
  left: 20%;
}
.Dots {
  display: none;
}
.image-captions {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}
.image-title {
  font-family: Bellefair;
  font-weight: 700;
  font-size: 3rem;
  filter: drop-shadow(0 0 8px red);
  text-transform: uppercase;
}
.image-caption {
  width: 40rem;
  height: auto;
  font-size: 1.7rem;
  text-align: center;
  margin-top: 1rem;
  backdrop-filter: blur(81.54845428466797px);
  background: #ffffff0a;
  border-radius: 15px;
}

.light .background {
  background-image: none;
  background: linear-gradient(to right, #007fd7, #ff6467);
}
.dark .background {
  background-image: none;
  background: linear-gradient(to right, #3f3f3f, #e2e2e2);
}

h1 {
  font-size: 3rem;
  text-align: center;
  margin-top: 2rem;
  margin-bottom: 2rem;
  font-weight: bold;
  color: white;
}
.hero-header {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}
.hero-text {
  width: 20rem;
  height: 7rem;
  font-size: 1.6rem;
  text-align: center;
  margin-top: 1rem;
  margin-bottom: 2rem;
}
.join-button {
  font-size: 3rem;
  color: #007fd7;
  font-weight: bolder;

  text-shadow:
    0 0 7px #ff0000,
    0 0 9px #0000ff;
}
.power-title {
  font-size: 3rem;
  margin-bottom: 1rem;
}
.card-image1 {
  max-width: 10rem;
  width: 100%;
  max-height: 15rem;
  height: 100%;
  filter: drop-shadow(0 0 0.75rem #007fd7);
}

.Cards {
  position: relative;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-wrap: wrap;
  flex-direction: row;
  gap: 5rem;
}

.Card1 {
  max-width: 20rem;
  width: 100%;
  max-height: 36rem;
  height: 100%;
  background-color: #ff6467;
  border-radius: 1rem;
  flex-wrap: wrap;
  font-size: 1.6rem;
  color: #007fd7;
  filter: drop-shadow(8px 8px);
}
.Card1:hover {
  transform: translateY(-20px);
  filter: drop-shadow(20px 20px #007fd7);
  animation: jump 2s ease-in-out infinite;
}
.Spider-Man {
  font-size: 2rem;
  margin-top: 1rem;
  font-weight: bold;
  color: #007fd7;
}

.Card2 {
  display: none;
  max-width: 20rem;
  width: 100%;
  max-height: 30rem;
  height: 100%;
  background-color: #981a1a;
  border-radius: 1rem;
  flex-wrap: wrap;
  font-size: 1.6rem;
  color: #f3c75f;
  filter: drop-shadow(8px 8px);
}
.Card2:hover {
  transform: translateY(-20px);
  filter: drop-shadow(20px 20px #f3c75f);
  animation: jump 2s ease-in-out infinite;
}
.iron-spider {
  font-size: 2rem;
  margin-top: 1rem;
  font-weight: bold;
  color: #f3c75f;
}
.card-image2 {
  max-width: 10rem;
  width: 100%;
  max-height: 15rem;
  height: 100%;
  filter: drop-shadow(0 0 0.75rem #f3c75f);
}

.Card3 {
  display: none;
  max-width: 30rem;
  width: 100%;
  max-height: 30rem;
  height: 100%;
  background-color: Black;
  border-radius: 1rem;
  flex-wrap: wrap;
  font-size: 1.6rem;
  color: white;
  filter: drop-shadow(8px 8px);
}
.Card3:hover {
  transform: translateY(-20px);
  filter: drop-shadow(20px 20px white);
  animation: jump 2s ease-in-out infinite;
}
.Agent-Venom {
  font-size: 2rem;
  margin-top: 1rem;
  font-weight: bold;
  color: white;
}
.card-image3 {
  max-width: 10rem;
  width: 100%;
  max-height: 15rem;
  height: 100%;
  filter: drop-shadow(0 0 0.75rem white);
}
/* ... */

